Fix thick scrollbar on filter menu

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -175,9 +175,10 @@
 
         .menu {
             max-height: 300px;
-            overflow-x: auto;
+            overflow-x: hidden;
             right: 0 !important;
             left: auto !important;
+            scrollbar-width: thin;
         }
 
         .dropdown.item {
